Modify textview location

--- a/app/src/main/res/layout/itemlist.xml
+++ b/app/src/main/res/layout/itemlist.xml
@@ -9,15 +9,16 @@
 
         <ImageView
             android:id="@+id/itemiv_guest"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             />
         <TextView
             android:id="@+id/itemtv_guest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/itemiv_guest"
-            android:textSize="20sp"
+
+            android:layout_centerInParent="true"
+            android:textSize="25sp"
             />
 
         <TextView
@@ -26,6 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:textSize="20sp"
+            android:layout_centerVertical="true"
             />
     </RelativeLayout>
 
@@ -35,15 +37,15 @@
 
         <ImageView
             android:id="@+id/itemiv_host"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             />
         <TextView
             android:id="@+id/itemtv_host"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:layout_toRightOf="@+id/itemiv_host"
+            android:textSize="25sp"
+            android:layout_centerInParent="true"
             />
 
         <TextView
@@ -51,6 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
             android:textSize="20sp"
             />
     </RelativeLayout>
